# lightkube-models

./: .gitignore  LICENSE  README.md  deploy.sh  fetch-and-release.sh  fetch-spec.sh  mkdocs.yml  pyproject.toml  release.sh  setup.py
.github/workflows/: python-package.yml
1.15/: 404.html  index.html  sitemap.xml
1.15/models/: index.html
1.15/resources/: index.html
1.15/search/: search_index.json
1.16/: 404.html  index.html  sitemap.xml
1.16/models/: index.html
1.16/resources/: index.html
1.16/search/: search_index.json
1.17/: 404.html  index.html  sitemap.xml
1.17/models/: index.html
1.17/resources/: index.html
1.17/search/: search_index.json
1.18/: 404.html  index.html  sitemap.xml
1.18/models/: index.html
1.18/resources/: index.html
1.18/search/: search_index.json
1.19/: 404.html  index.html  sitemap.xml
1.19/models/: index.html
1.19/resources/: index.html
1.19/search/: search_index.json
1.20/: 404.html  index.html  sitemap.xml
1.20/models/: index.html
1.20/resources/: index.html
1.20/search/: search_index.json
1.21/: 404.html  index.html  sitemap.xml
1.21/models/: index.html
1.21/resources/: index.html
1.21/search/: search_index.json
1.22/: 404.html  index.html  sitemap.xml
1.22/models/: index.html
1.22/resources/: index.html
1.22/search/: search_index.json
1.23/: 404.html  index.html  sitemap.xml
1.23/models/: index.html
1.23/resources/: index.html
1.23/search/: search_index.json
1.24/: 404.html  index.html  sitemap.xml
1.24/models/: index.html
1.24/resources/: index.html
1.24/search/: search_index.json
1.25/: 404.html  index.html  sitemap.xml
1.25/models/: index.html
1.25/resources/: index.html
1.25/search/: search_index.json
1.26/: 404.html  index.html  sitemap.xml
1.26/models/: index.html
1.26/resources/: index.html
1.26/search/: search_index.json
1.27/: 404.html  index.html
1.27/models/: index.html
1.27/resources/: index.html
1.27/search/: search_index.json
1.28/: 404.html  index.html  sitemap.xml
1.28/models/: index.html
1.28/resources/: index.html
1.28/search/: search_index.json
1.29/: 404.html  index.html
1.29/models/: index.html
1.29/resources/: index.html
1.29/search/: search_index.json
1.30/: 404.html  index.html
1.30/models/: index.html
1.30/resources/: index.html
1.31/: 404.html  index.html
1.32/: 404.html  index.html
1.33/: 404.html  index.html
1.34/: 404.html  index.html
1.35/: 404.html  index.html
lightkube-generate/: __main__.py  compile_models.py  compile_resources.py  fetch.py  get_template.py  mkextension.py  model.py
openapi/: kubernetes_v1.28.1.json  kubernetes_v1.30.0.json  kubernetes_v1.31.1.json  kubernetes_v1.32.0.json  kubernetes_v1.33.1.json  kubernetes_v1.34.0.json  kubernetes_v1.35.0.json
tools/: build.sh  compile.py  compile_models.py  compile_resources.py
(+1637 files in other folders)
