[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lightkube-models"
dynamic = ["version"]
description = "Models and Resources for lightkube module"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Giuseppe Tribulato", email = "gtsystem@gmail.com" }
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/gtsystem/lightkube-models"
Repository = "https://github.com/gtsystem/lightkube-models"

[tool.hatch.version]
path = "src/lightkube/models/__init__.py"

[tool.hatch.build.targets.sdist]
packages = ["src/lightkube/models", "src/lightkube/resources"]
sources = ["src/"]

[tool.hatch.build.targets.wheel]
packages = ["src/lightkube/models", "src/lightkube/resources"]
sources = ["src/"]
